--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "babel-preset-react": "^6.24.1",
     "css-loader": "^3.2.0",
     "html-webpack-plugin": "^3.2.0",
+    "optimize-js-plugin": "0.0.4",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "style-loader": "^1.0.0",
